--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="../static/styles.css">
 </head>
 
+
+
+
+
+<h2 style="text-align: center;">This chatbot will take your interview for a Generative AI developer position. Are You
+    Ready?</h2>
+
+
+
+
+
+
+
 <body class="full-screen">
     <div class="container-fluid h-100">
         <div class="row justify-content-center align-items-center h-100">
