--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 
-
+<strong></strong>
 
 
 <h2 style="text-align: center;">This chatbot will take your interview for a Generative AI developer position. Are You
